Live coding session extra - problem set 5

--- a/PF-3/exercises/ProblemSet5.ipynb
+++ b/PF-3/exercises/ProblemSet5.ipynb
@@ -12,9 +12,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\u001b[32mimport \u001b[39m\u001b[36m$ivy.$                               \n",
+       "\u001b[39m\n",
+       "\u001b[32mimport \u001b[39m\u001b[36morg.scalatest._\u001b[39m"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import $ivy.`org.scalatest::scalatest:3.0.8`\n",
     "import org.scalatest._"
@@ -403,9 +416,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mclass\u001b[39m \u001b[36mTestZipWith\u001b[39m"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "class TestZipWith(\n",
     "    zipWith: (List[Int], List[String]) => \n",
@@ -420,25 +444,171 @@
     "        zipWith(List(0),List(\"a\"))(f) shouldBe List(true)\n",
     "        zipWith(List(-2,3,-5), List(\"ab\",\"hi\",\"\"))(f) shouldBe \n",
     "            List(false, true, false)\n",
+    "        zipWith(List(), List(\"a\", \"b\", \"c\"))(f) shouldBe List()\n",
     "    }\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mfoldRight\u001b[39m"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "def zipWith[A, B, C](list1: List[A], list2: List[B])(f: (A, B) => C): List[C] = \n",
-    "    ???"
+    "def foldRight[A, B, C](list1: List[A], list2: List[B])(empty: C)(cons: (A, B, C) => C): C = \n",
+    "    (list1, list2) match {\n",
+    "        case (head1 :: tail1, head2 :: tail2) => \n",
+    "            val tailSol: C = foldRight(tail1, tail2)(empty)(cons)\n",
+    "            cons(head1, head2, tailSol)\n",
+    "        case _ => empty\n",
+    "    }"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mtupled\u001b[39m"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def tupled[A, B](list1: List[A], list2: List[B]): List[(A, B)] = \n",
+    "    foldRight(list1, list2)(\n",
+    "        List[(A, B)]())(\n",
+    "        (head1: A, head2: B, tailSol: List[(A, B)]) => \n",
+    "            (head1, head2) :: tailSol : List[(A, B)]\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mtupled\u001b[39m"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def tupled[A, B](list1: List[A], list2: List[B]): List[(A, B)] = \n",
+    "    (list1, list2) match {\n",
+    "        case (head1 :: tail1, head2 :: tail2) => \n",
+    "            val tailSol: List[(A, B)] = tupled(tail1, tail2)\n",
+    "            (head1, head2) :: tailSol\n",
+    "        case _ => Nil\n",
+    "    }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\u001b[36mres16_0\u001b[39m: \u001b[32mList\u001b[39m[(\u001b[32mInt\u001b[39m, \u001b[32mInt\u001b[39m)] = \u001b[33mList\u001b[39m((\u001b[32m1\u001b[39m, \u001b[32m4\u001b[39m), (\u001b[32m2\u001b[39m, \u001b[32m5\u001b[39m), (\u001b[32m3\u001b[39m, \u001b[32m6\u001b[39m))\n",
+       "\u001b[36mres16_1\u001b[39m: \u001b[32mList\u001b[39m[(\u001b[32mInt\u001b[39m, \u001b[32mInt\u001b[39m)] = \u001b[33mList\u001b[39m()"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tupled(List(1,2,3), List(4,5,6))\n",
+    "tupled(List[Int](), List[Int]())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mzipWith\u001b[39m"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def zipWith[A, B, C](list1: List[A], list2: List[B])(f: (A, B) => C): List[C] = \n",
+    "    tupled(list1, list2).map{\n",
+    "        case (a,b) => f(a,b)\n",
+    "    }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mzipWith\u001b[39m"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def zipWith[A, B, C](list1: List[A], list2: List[B])(f: (A, B) => C): List[C] = \n",
+    "    (list1 zip list2).map{\n",
+    "        case (a,b) => f(a,b)\n",
+    "    }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32mcmd8$Helper$TestZipWith:\u001b[0m\n",
+      "\u001b[32msum\u001b[0m\n",
+      "\u001b[32m- should work\u001b[0m\n"
+     ]
+    }
+   ],
    "source": [
     "run(new TestZipWith(zipWith))"
    ]
@@ -598,9 +768,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mclass\u001b[39m \u001b[36mTestTakeWhile\u001b[39m"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "class TestTakeWhile(\n",
     "    takeWhile: List[String] => (String => Boolean) => List[String]\n",
@@ -611,28 +792,247 @@
     "    \n",
     "    \"takeWhile\" should \"work\" in {\n",
     "        takeWhile(List())(isEvenLength) shouldBe List()\n",
-    "        takeWhile(List(\"a\", \"aa\", \"aaaa\"))(isEvenLength) shouldBe List()\n",
-    "        takeWhile(List(\"\", \"ab\", \"abcd\", \"a\", \"aa\"))(isEvenLength) shouldBe \n",
-    "            List(\"\", \"ab\", \"abcd\")\n",
+    "        \n",
+    "        takeWhile(\"a\" :: \"aa\" :: \"aaaa\" :: Nil))(isEvenLength) shouldBe \n",
+    "            Nil\n",
+    "        \n",
+    "        takeWhile(\"\" :: List(\"ab\", \"abcd\", \"a\", \"aa\"))(isEvenLength) shouldBe \n",
+    "            \"\" :: List(\"ab\", \"abcd\")\n",
+    "        \n",
+    "        takeWhile(List(\"aa\", \"a\", \"\", \"ab\", \"abcd\", \"a\", \"aa\")) shouldBe\n",
+    "            \n",
     "    }\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\u001b[36misEvenLength\u001b[39m: \u001b[32mString\u001b[39m => \u001b[32mBoolean\u001b[39m = ammonite.$sess.cmd27$Helper$$Lambda$2895/0x00000008017b9040@187f58ec"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "def takeWhile[A](list: List[A])(pred: A => Boolean): List[A] = \n",
-    "    ???"
+    "val isEvenLength: String => Boolean = \n",
+    "        (s: String) => s.length % 2 == 0"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\u001b[36mres28\u001b[39m: \u001b[32mList\u001b[39m[\u001b[32mString\u001b[39m] = \u001b[33mList\u001b[39m(\u001b[32m\"\"\u001b[39m, \u001b[32m\"ab\"\u001b[39m, \u001b[32m\"abcd\"\u001b[39m, \u001b[32m\"aa\"\u001b[39m)"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "List(\"\", \"ab\", \"abcd\", \"a\", \"aa\").filter(isEvenLength)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mfoldRight\u001b[39m"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def foldRight[A, B](list: List[A])(nil: B)(cons: (A, B) => B): B = ???"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mtakeWhile\u001b[39m"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def takeWhile[A](list: List[A])(pred: A => Boolean): List[A] = \n",
+    "    list.foldRight( List() : List[A] )(\n",
+    "        (head: A, tailPrefix: List[A]) => \n",
+    "            if (pred(head)) head :: tailPrefix\n",
+    "            else List() : List[A]\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mtakeWhile\u001b[39m"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def takeWhile[A](list: List[A])(pred: A => Boolean): List[A] = {\n",
+    "    def takeWhileAux(out: List[A], aux: List[A]): List[A] = \n",
+    "        aux match {\n",
+    "            case e :: tail if pred(e) => \n",
+    "                takeWhileAux(e :: out, tail)\n",
+    "            case _ => out\n",
+    "        }\n",
+    "    \n",
+    "    takeWhileAux(List(), list).reverse\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mtakeWhile\u001b[39m"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def takeWhile[A](list: List[A])(pred: A => Boolean): List[A] = \n",
+    "    list.foldLeft(List() : List[A]){\n",
+    "        case (out: List[A], e: A) if pred(e) => \n",
+    "            e :: out : List[A]\n",
+    "        case _ => \n",
+    "            out\n",
+    "    }.reverse"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mtakeWhile\u001b[39m"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def takeWhile[A](list: List[A])(pred: A => Boolean): List[A] = \n",
+    "    list.foldLeft((List[A](), List[A]())){\n",
+    "        case ((out, Nil), e) if pred(e) => \n",
+    "            (e :: out, Nil)\n",
+    "        case ((out, out1), e) => \n",
+    "            (out, e :: out1)\n",
+    "    }._1.reverse"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mtakeWhile\u001b[39m"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def takeWhile[A](list: List[A])(pred: A => Boolean): List[A] = \n",
+    "    list.foldLeft((List[A](), false)){\n",
+    "        case ((out, false), e) if pred(e) => \n",
+    "            (e :: out, false)\n",
+    "        case ((out, _), e) => \n",
+    "            (out, true)\n",
+    "    }._1.reverse"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\u001b[36mres45\u001b[39m: \u001b[32mList\u001b[39m[\u001b[32mInt\u001b[39m] = \u001b[33mList\u001b[39m(\u001b[32m1\u001b[39m, \u001b[32m2\u001b[39m, \u001b[32m3\u001b[39m)"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "takeWhile(List(1,2,3,11,12,0,13,4))(_ < 10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32mcmd31$Helper$TestTakeWhile:\u001b[0m\n",
+      "\u001b[32mtakeWhile\u001b[0m\n",
+      "\u001b[32m- should work\u001b[0m\n"
+     ]
+    }
+   ],
    "source": [
     "run(new TestTakeWhile(takeWhile))"
    ]
